--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <!-- <title>The page you were looking for doesn't exist (404)</title> -->
+  <title>Whoooaa, wipeout.</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
@@ -19,8 +20,8 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+    <h1>Things were going well till you caught that edge.</h1>
+    <p>Check out the address you typed in, or shoot us a heads up that this run needs a groomer ASAP.</p>
   </div>
 </body>
 </html>
